# GraphCap

./: .buildinfo  .cursorrules  .dockerignore  .env.caption.template  .gitignore  README.md  Taskfile.yml  design.html  distributed_caption_rfc.html  docker-compose.override.example.yml  docker-compose.yml  genindex.html  index.html  objects.inv  overview.html  provider.example.config.toml  pyproject.toml  pytest.ini  ruff.toml  search.html  searchindex.js
.doctrees/: design.doctree  distributed_caption_rfc.doctree  environment.pickle  index.doctree  overview.doctree
.github/: PULL_REQUEST_TEMPLATE.md
_sources/: design.md.txt  overview.rst.txt
client/: Dockerfile.client  drizzle.config.ts  package.json  pnpm-lock.yaml  template.env  tsconfig.json  vite.config.ts
pipelines/: .dep_hash  Dockerfile.pipelines  README.md  Taskfile.pipelines.yml  dagster.example.yml  index.html  pyproject.toml  setup.py
pipelines/_scripts/: pipeline_entrypoint.sh
pipelines/metadata/: exif_extraction.html  index.html
pipelines/metadata/common/: midjourney_data.html  xmp_data.html
pipelines/pipelines/: __init__.py  assets.py  definitions.py  start.py
pipelines/pipelines/caption_generation/: perspectives.py
pipelines/pipelines/common/: io.py  logging.py  resources.py  utils.py  workspace.py
pipelines/pipelines/huggingface/: __init__.py  client.py  dataset_export.py  dataset_import.py  dataset_manifest.py  dataset_prep.py  dataset_readme.py  perspective_export.py  types.py
pipelines/pipelines/image_analysis/: __init__.py  assets.py  sensors.py
pipelines/pipelines/io/: __init__.py
pipelines/pipelines/io/image/: __init__.py  load_images.py  types.py
pipelines/pipelines/io/image/image_metadata/: __init__.py  extract_exif.py
pipelines/pipelines/io/image/image_metadata/common_formats/: __init__.py  comfy_metadata.py  invoke_metadata.py  iptc_metadata.py  midjourney_metadata.py  xmp_metadata.py
pipelines/pipelines/jobs/: __init__.py  basic.py  custom_metadata_example.py  dataset_import_job.py  image_metadata.py  omi.py
pipelines/pipelines/perspectives/: __init__.py  assets.py  base_caption.py  types.py
pipelines/pipelines/perspectives/perspective_library/: base.py
pipelines/pipelines/perspectives/perspective_library/art_critic/: processor.py
pipelines/pipelines/perspectives/perspective_library/graph/: processor.py
pipelines/pipelines/perspectives/perspectives/graph/: processor.py
pipelines/pipelines/providers/: __init__.py  assets.py  provider_config.py  types.py
pipelines/pipelines/providers/clients/: base_client.py
server/: .dockerignore  .env.local.template  Dockerfile.server  Taskfile.server.yml  alembic.ini  index.html  orchestration_server.html  pyproject.toml  pytest.ini  ruff.toml  workflow_system.html  workspace.html
server/GraphCap/: cli.py  main.py
server/GraphCap/agents/: DenseGraphCaption.py  ImageCaptioner.py  router.py
server/GraphCap/agents/BasicReasoner/: BasicReasoner.py  schemas.py
server/GraphCap/agents/joycap/: ImageDataset.py  cap.py  cli.py  prompt_builder.py  prompt_config_library.py
server/GraphCap/caption/: graph_caption.py
server/GraphCap/config/: router.py  schema_library.py  server_controller.py
server/GraphCap/models/: get_model.py  get_vision_model.py
server/GraphCap/outlines/: vision.py
server/GraphCap/provider/: client_sandbox.ipynb
server/GraphCap/provider/providers/: base_client.py  gemini_client.py  gemini_sandbox.ipynb  ollama_client.py  openai_client.py  openrouter_client.py  provider_config.py  provider_manager.py  vllm_client.py
server/GraphCap/providers/: base_client.py  gemini_client.py  ollama_client.py  openai_client.py  openrouter_client.py  provider_manager.py  router.py  system.md  vllm_client.py
server/GraphCap/providers/clients/: __init__.py  base_client.py  gemini_client.py  ollama_client.py  vllm_client.py
server/GraphCap/schemas/: __init__.py  caption.py  structured_vision.py  vllm_schemas.py
server/GraphCap/server/: app.py  initialize.py
server/GraphCap/utils/: logger.py  message_logger.py
server/_scripts/: endpoints-entrypoint.sh  gunicorn.conf.py
server/alembic/: env.py
server/alembic/versions/: 001_create_workflows_table.py  002_add_workflow_metadata.py
server/batch_configs/: art_critic.toml  example_config.toml  graph_cap.toml  smoke_test.toml
server/batch_configs/tests/: image_analysis.json  smoke_test_image_load.json
server/graphcap/: main.py
server/graphcap/caption/: art_critic.py  base_caption.py  batch_config.py  graph_caption.py  graph_network.py  html_report.py
server/graphcap/caption/nodes/: __init__.py  perspective.py
server/graphcap/caption/perspectives/art_critic/: processor.py
server/graphcap/caption/perspectives/graph/: processor.py
server/graphcap/dag/: README.md  dag.py
server/graphcap/dag/nodes/: meta.py
server/graphcap/dataset/: dataset_manager.py  file_handler.py  metadata.py
server/graphcap/io/nodes/: __init__.py
server/graphcap/providers/: provider_config.py  provider_manager.py
server/graphcap/providers/clients/: base_client.py  openai_client.py  openrouter_client.py
server/graphcap/server/: app.py
server/server/: __init__.py  app.py  config.py  db.py  dependencies.py  initialize.py  main.py  models.py  routers.py
server/server/features/job/: __init__.py  dependencies.py  manager.py  models.py  router.py  schemas.py  service.py
server/server/features/jobs/: router.py
server/server/features/workflows/: __init__.py  loader.py  models.py  router.py  schemas.py  service.py
server/server/pipelines/: dagster_client.py
server/tests/: conftest.py  test_basic.py  test_dataset_config.py  test_image_sampling.py  test_meta_nodes.py  test_openai.py  test_provider_config.py  test_providers.py
(+361 files in other folders)
