# root pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphcap-workspace"
version = "0.0.2"
description = "graphcap workspace root"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "dagster-graphql>=1.9.11",
    "dagster>=1.9.11",
    "rich>=13.9.4",
    "termcolor>=2.5.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["graphcap"]

[project.scripts]
graphcap = "graphcap.main:cli"

# Added Ruff configuration
[tool.ruff]
# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Source directories
src = ["./lib/graphcap", "./server/server"]

# Same as Black
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default
select = ["E", "F", "W", "I001"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[project.optional-dependencies]
test = [
    "basedpyright>=1.26.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-watcher>=0.4.3",
]

[tool.uv.workspace]
members = ["lib", "server"]

[tool.uv.sources]
graphcap = { path = "." }
graphcap-server = { path = "server" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]


